force-app/main/default/objects/Inventory_Balance__c/Inventory_Balance__c.object-meta.xml
<CustomObject>
    <label>Inventory Balance</label>
    <nameField>
        <displayFormat>BNE-{0000}</displayFormat>
        <label>Balance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>