force-app/main/default/objects/Inventory_Balance__c/fields/Dispatched_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Quantity__c</fullName>
    <label>Dispatched Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>