force-app/main/default/objects/Inventory_Balance__c/fields/Last_Updated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date_Time__c</fullName>
    <label>Last Updated Date Time</label>
    <type>DateTime</type>
</CustomField>