force-app/main/default/objects/Inventory_Balance__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inventory Balances</relationshipLabel>
    <relationshipName>Inventory_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>